# MarketResearchCrew

./: README.md  pyproject.toml  report.md
db/: chroma.sqlite3
src/marketresearch/: crew.py  main.py
src/marketresearch/config/: agents.yaml  tasks.yaml
